--- a/app/views/editPost.scala.html
+++ b/app/views/editPost.scala.html
@@ -1,44 +1,47 @@
 @(postForm: Form[Post], post: Post)
 
-
 @import helper._
 @main("Welcome to The Category page") {
- @helper.form(action = routes.Posts.updatePost(post.title)) {
-        
-        <fieldset>
-            
-            
-            @inputText(
-                postForm("title"), 
-                '_label -> "Title" 
-            )  
-              @textarea(
-                postForm("content"), 
-                '_label -> "Content",
-                'cols -> 50,
-                'rows -> 10 
-            )
-            @select(
-                postForm("category"), 
-                options = options(Posts.getCategories),
-               
-                '_label -> "Category"  
-            )
-            @select(
-                postForm("author"), 
-                options = options(Posts.getUsers),
-                
-                '_label -> "User"  
-            )
-        </fieldset>
-        
- 
-        
-   
-        
-        <div class="actions">
-            <input type="submit" value="Add post" class="button">
-            <a href="@routes.Application.index" class="button">Cancel</a>
-        </div>
-    }
+@helper.form(action = routes.Posts.updatePost(post.title)) {
+
+<fieldset>
+
+    @inputText(
+    postForm("title"),
+    '_label -> "Title"
+    )
+    @textarea(
+    postForm("content"),
+    '_label -> "Content",
+    'cols -> 50,
+    'rows -> 10
+    )
+    @select(
+    postForm("category"),
+    options = options(Posts.getCategories),
+
+    '_label -> "Category"
+    )
+    @select(
+    postForm("author"),
+    options = options(Posts.getUsers),
+
+    '_label -> "User"
+    )
+    @textarea(
+    postForm("tag"),
+    '_label -> "tag",
+    'id -> "output",
+    'cols -> 50,
+    'rows -> 4,
+    'disabled -> "disabled"
+
+    )
+</fieldset>
+
+<div class="actions">
+    <input type="submit" value="Add post" class="button">
+    <a href="@routes.Application.index" class="button">Cancel</a>
+</div>
+}
 }
